--- a/action.yaml
+++ b/action.yaml
@@ -1,6 +1,6 @@
-name: Tweeter Action
-author: devigned
-description: Simple action to send a tweet via an GitHub Action.
+name: Legendary Twitter Action
+author: bism
+description: Legendary action to send a tweet.
 inputs:
   message:
     description: 'message you want to tweet'
